Časové intervaly generované z konfiguráku, tooltipy, ikony markerů, ...

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -8,6 +8,12 @@
 	<meta name="author" content="Daniel Dolejška">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<meta property="og:title" content="Executor - DayZ-SA.cz :: Event Viewer Tool" />
+	<meta property="og:image" content="https://map.dayz-sa.cz/executor/images/thumbnail.jpg" />
+	<meta property="og:image:type" content="image/jpeg" />
+	<meta property="og:image:width" content="1280" />
+	<meta property="og:image:height" content="670" />
+
 	<!-- // CSS & META \\ -->
 	<link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
