--- a/app/templates/Front/home.latte
+++ b/app/templates/Front/home.latte
@@ -647,7 +647,21 @@
 				tooltipContent+= ": ";
 				{/if}
 				{* name *}
-				tooltipContent+= "<b>" + e.event_data.name + "</b>";
+				if (e.event_type === "KILLED_BY_PLAYER" && e.event_data.killer.name)
+				{
+					if (e.event_data.killer.hands)
+					{
+						tooltipContent+= "<b>" + e.event_data.name + "</b> <small>was killed by</small> <b>" + e.event_data.killer.name + "</b> <small>with</small> " + e.event_data.killer.hands;
+					}
+					else
+					{
+						tooltipContent+= "<b>" + e.event_data.name + "</b> <small>was killed by</small> <b>" + e.event_data.killer.name + "</b>";
+					}
+				}
+				else
+				{
+					tooltipContent+= "<b>" + e.event_data.name + "</b>";
+				}
 				{/if}
 				marker.bindTooltip(tooltipContent);
 				{/if}
