Možnost přepsání konfigurace jinou konfigurací po přihlášení

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -87,6 +87,26 @@
 		</div>
 	</div>
 </div>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="no-events">
+	<div class="modal-dialog modal-sm" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">No events were found!</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body text-center">
+				<p>There were no events found for this server/log selection.</p>
+				<p class="m-0">There are either no recorded events in selected log or the filters are too strict.</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
 <!-- \\ CONTENT // -->
 
 <!-- // FOOTER \\ -->
